--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "expo": "^52.0.37",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
     "react": "18.3.1",
@@ -20,7 +19,8 @@
     "react-native": "0.76.7",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo": "~52.0.37"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
+    "expo": "^52.0.37",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
