--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"forwardPorts": [
 		19001
 	],
-	"postCreateCommand": "figlet 'ANSAT Pro' && ./rundocker.sh"
+	"postCreateCommand": "figlet 'ANSAT Pro' && ./run_frontend.sh"
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// Note: Useful for when they open it and want everything to just start
 	// "postCreateCommand": "./.devcontainer/setup.sh",
