--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 	"forwardPorts": [
 		19001
 	],
-	"postCreateCommand": "(cd frontend && npm install) && figlet 'ANSAT Pro' && echo '\\033[1;33mrun ./run_frontend.sh to start the frontend\\033[0m'"
+	"postCreateCommand": "(cd frontend && npm install) && figlet 'ANSAT Pro' && echo '\\033[1;33mrun ./run_frontend.sh to start the frontend\\033[0m'",
+	"postStartCommand": "./run_frontend.sh"
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// Note: Useful for when they open it and want everything to just start
 	// "postCreateCommand": "./.devcontainer/setup.sh",
