Update devcontainer configuration, add Docker Compose file, and create frontend run scripts

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,4 +16,4 @@ COPY . .
 EXPOSE 19000
 
 # Start the Expo app
-CMD ["npx", "expo", "start", "--port", "19001"]
+# CMD ["npx", "expo", "start", "--port", "19001"]
