Update Docker configuration: modify frontend Dockerfile path and add backend Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: ./frontend/Dockerfile
+      dockerfile: .docker/frontend/Dockerfile
     ports:
       - "19000:19000"
       - "19001:19001"
