--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,49 +1,32 @@
 {
   "name": "ansat-pro",
+  "main": "index.tsx",
   "version": "1.0.0",
   "scripts": {
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "start": "expo start --port 19000",
-    "prebuild": "expo prebuild",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "dev": "expo start -c --ios",
+    "dev:web": "expo start -c --web",
+    "dev:android": "expo start -c --android",
+    "android": "expo start -c --android",
+    "ios": "expo start -c --ios",
+    "web": "expo start -c --web",
+    "clean": "rm -rf .expo node_modules",
+    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@radix-ui/themes": "^3.2.1",
-    "@rn-primitives/accordion": "^1.1.0",
-    "@rn-primitives/alert-dialog": "^1.1.0",
-    "@rn-primitives/aspect-ratio": "^1.1.0",
-    "@rn-primitives/avatar": "^1.1.0",
-    "@rn-primitives/checkbox": "^1.1.0",
-    "@rn-primitives/collapsible": "^1.1.0",
-    "@rn-primitives/context-menu": "^1.1.0",
-    "@rn-primitives/dialog": "^1.1.0",
-    "@rn-primitives/dropdown-menu": "^1.1.0",
-    "@rn-primitives/hover-card": "^1.1.0",
-    "@rn-primitives/label": "^1.1.0",
-    "@rn-primitives/menubar": "^1.1.0",
-    "@rn-primitives/navigation-menu": "^1.1.0",
-    "@rn-primitives/popover": "^1.1.0",
-    "@rn-primitives/progress": "^1.1.0",
-    "@rn-primitives/radio-group": "^1.1.0",
-    "@rn-primitives/select": "^1.1.0",
-    "@rn-primitives/separator": "^1.1.0",
-    "@rn-primitives/slot": "^1.1.0",
-    "@rn-primitives/switch": "^1.1.0",
-    "@rn-primitives/table": "^1.1.0",
-    "@rn-primitives/tabs": "^1.1.0",
-    "@rn-primitives/toggle": "^1.1.0",
-    "@rn-primitives/toggle-group": "^1.1.0",
-    "@rn-primitives/tooltip": "^1.1.0",
-    "@rn-primitives/types": "^1.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "expo": "~52.0.37",
+    "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/avatar": "~1.1.0",
+    "@rn-primitives/portal": "~1.1.0",
+    "@rn-primitives/progress": "~1.1.0",
+    "@rn-primitives/slot": "~1.1.0",
+    "@rn-primitives/tooltip": "~1.1.0",
+    "@rn-primitives/types": "~1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "~4.0.16",
@@ -51,7 +34,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "lucide-react-native": "^0.378.0",
-    "nativewind": "latest",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -66,22 +49,9 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-universe": "^12.0.1",
-    "expo": "^52.0.37",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
-  "eslintConfig": {
-    "extends": "universe/native",
-    "root": true
-  },
-  "main": "node_modules/expo/AppEntry.js",
   "private": true
 }
