--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
     "clean": "rm -rf .expo node_modules",
-    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
+    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
+    "ts:check": "tsc"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.0",
     "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
+    "expo-module-scripts": "^4.0.4",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
