--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "web": "expo start -c --web",
     "clean": "rm -rf .expo node_modules",
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
-    "ts:check": "tsc"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint",
+    "format": "prettier --write .",
+    "format:check": "prettier -c ."
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
@@ -53,7 +56,15 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "3.5.3",
     "typescript": "^5.3.3"
+  },
+  "eslintConfig": {
+    "extends": "universe/native",
+    "root": true
   },
   "private": true
 }
