Add Prettier to ESLint configuration for improved code formatting

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,8 +62,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "universe/native"
-    
+      "universe/native",
+      "prettier"
     ],
     "rules": {},
     "root": true
