--- a/frontend/app.json
+++ b/frontend/app.json
@@ -25,7 +25,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "server",
+      "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": ["expo-router"],
