Add login page and integrate Appwrite for user authentication
- Introduced a new loginPage component for user authentication, allowing users to register, log in, and log out.
- Integrated Appwrite SDK for handling user sessions and account management.
- Updated app.json to include bundle identifiers for iOS and Android.
- Added react-native-appwrite dependency in package.json and package-lock.json.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -15,13 +15,15 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ansat.pro"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ansat.pro"
     },
     "web": {
       "bundler": "metro",
