--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.1.0",
@@ -28,8 +31,8 @@
     "@rn-primitives/slot": "~1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
     "expo-module-scripts": "^4.0.4",
@@ -38,6 +41,7 @@
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
+    "lucide-react": "^0.479.0",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -49,7 +53,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
