--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -31,8 +33,10 @@
     "@rn-primitives/slot": "~1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
+    "appwrite": "^17.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.25",
     "expo-linking": "~7.0.4",
     "expo-module-scripts": "^4.0.4",
@@ -44,12 +48,13 @@
     "lucide-react": "^0.479.0",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
+    "node-appwrite": "^15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.7.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
